# 20250926_RCWA_appstreamlit

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  00_the_plan.md  01_presets_exports_implementation_pack.md  02_validation_tab_implementation_pack.md  03_engine_pack_rcwa_planar_tmm_baseline_contracts_preserving.md  04_rcwa_1_d_pack_grating_orders_with_energy_consistent_weights.md  05_full_rcwa_li_lalanne_rigorous_1_d_s_matrix_skeleton_pack.md  06_01-06_rigorous_rcwa_patch_1_6_fourier_order_grid.md  07_R_01_TE_modal_eigenproblem_Li factorization_uniform-limit_exact.md  CONTRIBUTING.md  LICENCE.md  README.md  coverage.xml  license_mit_and_ci_workflow.md  pyproject.toml  readme.md  requirements.lock.txt
.github/workflows/: ci.yml
docs/: contracts.md
rcwa_app/: __main__.py
rcwa_app/adapters/: registry.py
rcwa_app/adapters/materials/: builtin.py
rcwa_app/adapters/presets_local/: store.py
rcwa_app/adapters/solver_mock/: engine.py
rcwa_app/adapters/solver_rcwa/: 08_notes_for_millestoneR.md  coupling.py  engine.py  engine_1d.py  engine_rigorous1d.py  grating1d.py  layer1d.py  layer_modal.py  rigorous1d.py  smatrix.py  tmm.py
rcwa_app/adapters/validation_csv/: loader.py
rcwa_app/domain/: models.py  ports.py
rcwa_app/exporting/: io.py
rcwa_app/orchestration/: session.py
rcwa_app/plotting_plotly/: presenter.py
rcwa_app/reports/: methods.py  validation.py
rcwa_app/thermal/: planck.py
rcwa_app/validation/: metrics.py
tests/: conftest.py  factorization_uniforma_limit.py  test_api_surface.py  test_coupling_power_utils.py  test_dataset_constracts_with_mock.py  test_eigs_te_conditioning.py  test_eigs_te_uniform_limit.py  test_eigs_tm_uniform_limit.py  test_engine_port_compact.py  test_engine_registry.py  test_factorization_matrix_properties.py  test_fourier_contracts_toeplitz.py  test_fourier_inverse_lamellar.py  test_fourier_lamellar_coeffs.py  test_layer_cascade_equals_single.py  test_layer_smatrix_energy.py  test_modal_li_te_equals_slab_uniform.py  test_modal_uniform_eigs.py  test_modal_uniform_fallback_equals_slab.py  test_models.py  test_optional_field_guard.py  test_orders_grid_rigorous.py  test_planck_weights_and_hemi.py  test_presenter_overlay.py  test_presenter_snapshot.py  test_rcaw1d_planar_limit.py  test_rcwa1d_order_mask.py  test_rcwa1d_rigorous_contract.py  test_rcwa1d_rigorous_lite.py  test_rcwa_planar_energy.py  test_rigorous1d_toeplitz_contract.py  test_rigorous_diagnostics_attr.py  test_smatrix_identity_and_propagation.py  test_smatrix_star_basic_associativity.py  test_tm_operator_contract.py  test_validation_loader.py  test_validation_rmse.py
ui_streamlit/: app.py
